setting up a modal with portals

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- this gives us a place in the dom that we can render stuff into, even from deeply nested components -->
+    <div id="modal"></div>
     
     <div id="root">Not Rendered</div>
 
